[package]
name = "rtb"
version = "0.3.2"
authors = ["Nicklas Kaadner <nicklas.kaadner@gmail.com>"]
license = "MIT"
description = "A tool for generating React component boilerplate"
readme = "README.md"
homepage = "https://github.com/JZTNicklas/rtb"
repository = "https://github.com/JZTNicklas/rtb"


[dependencies]
askama = "0.12.0"
clap = { version = "4.0", features = ["derive"] }